BusinessLogic now uses transactions properly; create a small Python library for Backmeup-REST-Communication; added REST-Python-Tests

--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
@@ -10,3 +10,7 @@ org.backmeup.logic.impl.BusinessLogicImpl.VALIDATION_OF_ACCESS_DATA_FAILED=Valid
 org.backmeup.logic.impl.BusinessLogicImpl.USER_DOESNT_EXIST=User %s doesn't exist!
 org.backmeup.logic.impl.BusinessLogicImpl.PARAMETER_NULL=Parameter null
 org.backmeup.logic.impl.BusinessLogicImpl.INVALID_USER=Invalid user
+org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_PROFILE=Unknown profile %d
+org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belong to user %s
+org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
+org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
