passwords now have a minimal length (configured within bl.properties); email validation has been added (new REST calls!); upgraded python-tests

--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
@@ -14,3 +14,5 @@ org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_PROFILE=Unknown profile %d
 org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belong to user %s
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
+org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Verify your backmeup account
+org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_CONTENT=To verify the email address of your backmeup account, open the following link in your browser:\n%s\nIf you didn't request a backmeup account, you can simply ignore this mail.
