--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_en.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_en.properties
@@ -15,4 +15,20 @@ org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belo
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Verify your backmeup account
-org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_CONTENT=To verify the email address of your backmeup account, open the following link in your browser:\n%s\nIf you didn't request a backmeup account, you can simply ignore this mail.
+org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_MIME_TYPE=text/html
+# {0} = verification url; {1} = verification key
+org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_CONTENT=\
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"\n\
+    "http://www.w3.org/TR/html4/strict.dtd">\n\
+<html lang="en">\
+  <head>\
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">\
+    <title>Verify your backmeup account</title>\
+  </head>\
+  <body>\
+    <p>To verify the email address of your backmeup account, open the following link in your browser:</p>\
+    <a href="{0}">{0}</a>\
+    <p>Alternatively you might want to enter the verification key manually: {1}</p>\
+    <p>If you didn't request a backmeup account, you can simply ignore this mail.</p>\
+  </body>\
+</html>
