Added basic python-tests for search in index

--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
@@ -15,6 +15,7 @@ org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belo
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Verify your backmeup account
+org.backmeup.logic.impl.BusinessLogicImpl.ERROR_OCCURED=Ein Fehler ist aufgetreten
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_MIME_TYPE=text/html
 # {0} = verification url; {1} = verification key
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_CONTENT=\
