--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_en.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_en.properties
@@ -14,6 +14,7 @@ org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_PROFILE=Unknown profile %d
 org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belong to user %s
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
+org.backmeup.logic.impl.BusinessLogicImpl.ERROR_OCCURED=An error occured
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Verify your backmeup account
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_MIME_TYPE=text/html
 # {0} = verification url; {1} = verification key
