--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
@@ -14,6 +14,7 @@ org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_PROFILE=Unknown profile %d
 org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belong to user %s
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
+org.backmeup.logic.impl.BusinessLogicImpl.NO_PROFILE_WITHIN_JOB=There is no job %d which uses actionId %s.
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Verify your backmeup account
 org.backmeup.logic.impl.BusinessLogicImpl.ERROR_OCCURED=Ein Fehler ist aufgetreten
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_SEARCH_ID=SearchId existiert nicht!
