--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_en.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_en.properties
@@ -11,6 +11,7 @@ org.backmeup.logic.impl.BusinessLogicImpl.USER_DOESNT_EXIST=User %s doesn't exis
 org.backmeup.logic.impl.BusinessLogicImpl.PARAMETER_NULL=Parameter null
 org.backmeup.logic.impl.BusinessLogicImpl.INVALID_USER=Invalid user
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_PROFILE=Unknown profile %d
+org.backmeup.logic.impl.BusinessLogicImpl.VALIDATOR_NOT_AVAILABLE=Plugin %s has no validator; no validation of profile took place.
 org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belong to user %s
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
