cw: added the german translation for the verification email

--- a/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
+++ b/org.backmeup.logic.impl/src/main/resources/BusinessLogicImpl_de.properties
@@ -16,7 +16,7 @@ org.backmeup.logic.impl.BusinessLogicImpl.JOB_USER_MISSMATCH=Job %d doesn't belo
 org.backmeup.logic.impl.BusinessLogicImpl.NO_SUCH_JOB=No such job %d
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_ACTION=No such action "%s"
 org.backmeup.logic.impl.BusinessLogicImpl.NO_PROFILE_WITHIN_JOB=There is no job %d which uses actionId %s.
-org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Verify your backmeup account
+org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_SUBJECT=Best&auml;tige deinen back me up Benutzer
 org.backmeup.logic.impl.BusinessLogicImpl.ERROR_OCCURED=Ein Fehler ist aufgetreten
 org.backmeup.logic.impl.BusinessLogicImpl.UNKNOWN_SEARCH_ID=SearchId existiert nicht!
 org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_MIME_TYPE=text/html
@@ -30,9 +30,9 @@ org.backmeup.logic.impl.BusinessLogicImpl.VERIFICATION_EMAIL_CONTENT=\
     <title>Verify your backmeup account</title>\
   </head>\
   <body>\
-    <p>To verify the email address of your backmeup account, open the following link in your browser:</p>\
+    <p>Um deinen back me up-Account vollst&auml;ndig zu aktivieren, musst du den folgenden Link in deinem Browser &ouml;ffnen:</p>\
     <a href="{0}">{0}</a>\
-    <p>Alternatively you might want to enter the verification key manually: {1}</p>\
-    <p>If you didn't request a backmeup account, you can simply ignore this mail.</p>\
+    <p>Als Alternative kannst du auch den folgenden Best&auml;tigungs-Code in das entsprechende Feld auf <a href="http://www.backmeup.at/verify_email/">http://www.backmeup.at/verify_email/</a> eintragen: {1}</p>\
+    <p>Du hast dich nicht auf back me up registriert? Dann betrachte dieses E-Mail als gegenstandslos.</p>\
   </body>\
 </html>
